# dashboard

./: .dockerignore  .gitignore  INTELLIGENCE_PLATFORM_BUILD.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
apps/dashboard/: .env.example  middleware.ts  next.config.mjs  package.json
apps/dashboard/app/: globals.css  layout.tsx
apps/dashboard/components/: AccountActions.tsx  AddConnector.tsx  LiveRefresh.tsx  Logomark.tsx  PluginCard.tsx  RunImportButton.tsx  SdkKeys.tsx  Sidebar.tsx  ThemeSetting.tsx  (+2 more)
apps/intel-api/: .env.example  Dockerfile  package.json
apps/intel-ml/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/intel-ml/src/intel_ml/: __init__.py  db.py  forecast.py  normalize.py  parquet_io.py  pipeline.py  run.py  sdk_pipeline.py  sdk_stats.py  stats.py  storage.py  tracing.py
apps/intel-ml/src/intel_ml/insights/: __init__.py  agents.py  llm.py  schema.py  sdk_agents.py
apps/intel-ml/src/intel_ml/insights/prompts/: __init__.py
apps/intel-ml/tests/: conftest.py  test_forecast.py  test_insights.py  test_normalize.py  test_pipeline.py  test_run.py  test_sdk_ml.py  test_stats.py
apps/intel-worker/: .env.example  Dockerfile  package.json  tsconfig.json
docs/: BUILD_LOG.md  DEPLOY_CHECKLIST.md  PIPELINE.md  RUNBOOK.md  SCHEMA_MAPPING.md
infra/: deploy-api.sh  deploy-ml.sh  deploy-worker.sh  gcp-bootstrap.sh  setup-budget.sh  setup-observability.sh  setup-queue.sh  setup-scheduler.sh  setup-sdk-ml-scheduler.sh  setup-wif.sh
(+50 files in other folders)
