[project]
name = "intel-ml"
version = "0.1.0"
description = "Agentronics intelligence platform — ML + insight Cloud Run Job"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=3.11.0",
    "google-genai>=2.8.0",
    "numpy>=2.4.6",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "opentelemetry-sdk>=1.42.1",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intel_ml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
